        Reviewed by Sam.

Fix :checked matching type='text' and add test case
        http://bugs.webkit.org/show_bug.cgi?id=16750

        Test: fast/dom/HTMLInputElement/checked-pseudo-selector.html

        * html/HTMLInputElement.h: isChecked() can only be true for RADIO or CHECKBOX


Canonical link: https://commits.webkit.org/23042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29204 268f45cc-cd09-0410-ab3c-d52691b4dbfc